# votaciones-e14

./: .gitignore  BITACORA.md  GUIA.md  HALLAZGOS.md  LICENSE  README.md  build_exe.py  diagnosticar_akamai.py  index.html  pyproject.toml  requirements.txt  validar_dos_mesas.py
votaciones/: __init__.py  cambios.py  config.py  datos.py  descargar.py  imagenes.py  indices.py  inventario.py  menu.py
